samples/_failures_safe/1761516531_292ba7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4aea39b6.c: In function ‘main’:
./samples/SAFE/__tmp_4aea39b6.c:161:9: error: expected expression at end of input
  161 |         {
      |         ^
./samples/SAFE/__tmp_4aea39b6.c:161:9: error: expected declaration or statement at end of input
